# dq-sentinel

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  observability.py  schemas.py  security.py  worker.py
backend/app/api/: __init__.py  adhoc_dashboards.py  audit.py  auth.py  catalog.py  chat.py  checks.py  connections.py  contracts.py  custom_dashboards.py  dashboard.py  datasets.py  docs.py  exceptions_api.py  incidents.py  insights.py  knowledge.py  lineage.py  mcp.py  monitors.py  notifications.py  query.py  rca.py  runs.py  saved_queries.py  scorecards.py  search.py  serialize.py  sla.py  status.py
backend/app/catalog/: __init__.py  definitions.py  generators.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_adhoc_dashboards.py  test_api.py  test_attribution.py  test_audit.py  test_authz_enforcement.py  test_catalog.py  test_chat.py  test_check_versions.py  test_checks.py  test_checks_bulk.py  test_config.py  test_connector_dialects.py  test_contracts.py  test_custom_dashboards.py  test_dashboard_console.py  test_db_engine.py  test_docs.py  test_exception_lifecycle.py  test_exceptions_api.py  test_generator.py  test_grants.py  test_incident_channels.py  test_incidents.py  test_insights.py  test_lineage.py  test_llm_providers.py  test_mcp.py  test_migrations.py  test_ml.py  test_monitors.py  test_notifications.py  test_profiler.py  test_query_counts.py  test_runs_api.py  test_safety.py  test_saved_queries.py  test_scheduler.py  test_schema_change.py  test_scorecard_history.py  (+7 more)
(+240 files in other folders)
