[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dqsentinel"
version = "0.1.0"
description = "DQ Sentinel backend: LLM-native data quality monitoring"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "PyJWT>=2.9",
    "bcrypt>=4.2",
    "croniter>=3.0",
    "duckdb>=1.1",
    "duckdb-engine>=0.13",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "anthropic>=0.49",
    "openai>=1.60",
    "httpx>=0.27",
    "prometheus-client>=0.21",
    "sqlglot>=26.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.1"]
snowflake = ["snowflake-sqlalchemy>=1.6"]
bigquery = ["sqlalchemy-bigquery>=1.11"]
trino = ["trino[sqlalchemy]>=0.330"]
clickhouse = ["clickhouse-sqlalchemy>=0.3"]
all-connectors = [
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
    "pyodbc>=5.1",
    "snowflake-sqlalchemy>=1.6",
    "sqlalchemy-bigquery>=1.11",
    "trino[sqlalchemy]>=0.330",
    "clickhouse-sqlalchemy>=0.3",
]
dev = ["pytest>=8.2", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning:duckdb_engine"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in defaults is idiomatic
